Single sseKms function